Add more slides

--- a/index.html
+++ b/index.html
@@ -346,6 +346,55 @@
                         </code></pre>
                     </section>
                 </section>
+
+                <section>
+                    <h2>You can contribute!</h2>
+                    <p class="colored" style="text-align: center;">
+                        <a href="https://github.com/indico/js-flask-urls">indico/js-flask-urls @ GitHub</a>
+                    </p>
+                    <p>We could really use...</p>
+                    <p>🧾 Docs (only examples right now 😞)</p>
+                    <p>✨ TypeScript stubs</p>
+                    <p><small>🖥️ More projects using it (and finding bugs?)</small></p>
+                    <p>➡️ Brag about having contributed to a CERN project! 🎉</p>
+                </section>
+
+                <section>
+                    <section>
+                        <h2>Other cool stuff</h2>
+                    </section>
+
+                    <section>
+                        <p>Non-macro Babel plugin for Flask URL building</p>
+                        <pre><code data-trim>
+                            import greetingURL from 'flask-url:greeting';
+                            import otherURL from 'flask-url:blueprint.endpoint';
+                        </code></pre>
+                        <p>Same features as the macro version</p>
+                        <p>Alternative to the macro, but requires control over the Webpack/Babel config</p>
+                    </section>
+
+                    <section>
+                        <p>
+                            Server-side validation:
+                            <a href="https://webargs.readthedocs.io">webargs</a>
+                        </p>
+                        <p>
+                            Form handling & validation:
+                            <a href="https://github.com/final-form/react-final-form">🏁 react-final-form</a>
+                        </p>
+                    </section>
+
+                    <section>
+                        <p>More complete example of React-Flask integration</p>
+                        <p style="text-align: center;">
+                            <a href="https://github.com/ThiefMaster/flask-cra-example">
+                                ThiefMaster/flask-cra-example @ GitHub
+                            </a>
+                        </p>
+                        <p>Also covers how to build for production</p>
+                    </section>
+                </section>
             </div>
         </div>
 
