Add title & metadata

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="description" content="A presentation on how to nicely integrate Flask with a React frontend">
+        <meta name="author" content="Adrian Moennich">
 
-        <title>reveal.js</title>
+        <title>useFlask() - or how to use a React frontend for your Flask app</title>
 
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/reveal.css">
