Add name+handle to about slide

--- a/index.html
+++ b/index.html
@@ -46,23 +46,26 @@
                 <section>
                     <h2>About me</h2>
 
-                    <div style="margin-bottom: 1em;">
-                        <p>👨‍💻 Lead Developer of the <a href="https://getindico.io">Indico project</a> at CERN</p>
-                        <p>
-                            🛠️ One of the <span class="colored">Pallets</span>
-                            <img src="res/pallets.png"
-                                 class="plain transparent inline"
-                                 style="max-width: 1em;">
-                            maintainers
-                        </p>
-                        <p>🐍 <span class="colored">Python</span> enthusiast since almost 10 years</p>
-                        <p>
-                            ✨ Moved on from jQuery to <span class="colored">React</span>
-                            <img src="res/react-logo.svg"
-                                 class="plain transparent inline"
-                                 style="max-width: 1em;">
-                        </p>
-                    </div>
+                    <p class="colored large" style="display:flex; justify-content: space-between;">
+                        <strong>Adrian Mönnich</strong>
+                        <strong>@ThiefMaster</strong>
+                    </p>
+
+                    <p>👨‍💻 Lead Developer of the <a href="https://getindico.io">Indico project</a> at CERN</p>
+                    <p>
+                        🛠️ One of the <span class="colored">Pallets</span>
+                        <img src="res/pallets.png"
+                             class="plain transparent inline"
+                             style="max-width: 1em;">
+                        maintainers
+                    </p>
+                    <p>🐍 <span class="colored">Python</span> enthusiast since almost 10 years</p>
+                    <p>
+                        ✨ Moved on from jQuery to <span class="colored">React</span>
+                        <img src="res/react-logo.svg"
+                             class="plain transparent inline"
+                             style="max-width: 1em;">
+                    </p>
                 </section>
 
                 <section>
