Don't load image from example code

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                               return (
                                 {/* ... */}
                                 <header className="App-header">
-                                  <img src={logo} className="App-logo" alt="logo" />
+                                  &lt;img src={logo} className="App-logo" alt="logo" /&gt;
                                   &lt;Demo /&gt;
                                 </header>
                                 {/* ... */}
