We need MORE EMOJI! Also, ZombIE!

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <section>
                         <h2>JavaScript</h2>
                         <p>Rarely transpiled (sometimes minified)</p>
-                        <p>Code written for old browsers</p>
+                        <p>Code written for old browsers <i class="fab fa-sm fa-internet-explorer" style="color: #bad80a;"></i> 🧟‍♂</p>
                         <p>Why are you still writing the same kind of JS you wrote 10 years ago?</p>
                     </section>
                 </section>
@@ -149,7 +149,7 @@
                     <section>
                         <h2>create-react-app</h2>
                         <p>Contains the whole build config</p>
-                        <p>Auto-rebuild & hot reload</p>
+                        <p>Auto-rebuild 🏗 & hot reload 🔥</p>
                         <p>Includes its own dev server</p>
                     </section>
                 </section>
@@ -201,7 +201,7 @@
                         <p>Especially if they are dynamic 😠</p>
                     </section>
                     <section>
-                        <p>Install some more packages 📦</p>
+                        <p>📦 Install some more packages</p>
                         <pre><code data-trim class="shell">
                             $ pip install flask-url-map-serializer
                             $ npm install --save-dev flask-urls.macro
@@ -209,7 +209,7 @@
                         </code></pre>
                     </section>
                     <section>
-                        <p>Hook up 🎣 the build scripts with Flask</p>
+                        <p>🎣 Hook up the build scripts with Flask</p>
                         <pre><code data-trim>
                             // client/.babel-plugin-macrosrc.js
                             const {execSync} = require('child_process');
@@ -223,7 +223,7 @@
                         </code></pre>
                     </section>
                     <section>
-                        <p>Link the dev servers 🔗</p>
+                        <p>🔗 Link the dev servers</p>
                         <pre><code data-trim>
                             // client/src/setupProxy.js
                             const proxy = require('http-proxy-middleware');
