--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <section>
                         <h2><code>useFlask()</code></h2>
                         <p class="large">
-                            ...or how to use a
+                            …or how to use a
                             <img src="res/react-logo.svg" class="spin plain transparent inline" style="max-width: 1em;">
                             <span class="colored">React</span>
                             frontend for your Flask app
@@ -130,7 +130,7 @@
                     </section>
 
                     <section>
-                        <p>Can't we do something like...</p>
+                        <p>Can't we do something like…</p>
                         <p style="text-align: center;"><code class="colored">from webpack import config</code></p>
                     </section>
 
@@ -180,12 +180,12 @@
                         <h2>Generate the client</h2>
                         <pre><code data-trim class="shell">
                             $ npx create-react-app client
-                            Creating a new React app in [...]/ep2019-flask-react/testapp/client.
+                            Creating a new React app in …/ep2019-flask-react/testapp/client.
 
                             Installing packages. This might take a couple of minutes.
                             Installing react, react-dom, and react-scripts...
 
-                            [...]
+                            …
 
                             We suggest that you begin by typing:
 
@@ -247,17 +247,17 @@
                     <section>
                         <pre><code data-trim data-line-numbers="1,3,10" class="jsx">
                             // client/src/App.js
-                            // ...
+                            // …
                             import Demo from './Demo';
 
                             function App() {
                               return (
-                                {/* ... */}
+                                {/* … */}
                                 <header className="App-header">
                                   &lt;img src={logo} className="App-logo" alt="logo" /&gt;
                                   &lt;Demo /&gt;
                                 </header>
-                                {/* ... */}
+                                {/* … */}
                               );
                             }
                         </code></pre>
@@ -272,7 +272,7 @@
                             const greetingURL = flask`greeting`;
 
                             export default function Demo() {
-                              // continued on next slide
+                              // continued on next slide…
                             }
                         </code></pre>
                     </section>
@@ -335,7 +335,7 @@
                             null,
                             {
                               endpoint: "greeting",
-                              rules: [/* ...building rules omitted here... */]
+                              rules: [/* …building rules omitted here… */]
                             },
                             ""
                           );
@@ -349,7 +349,7 @@
                         <i class="fab fa-sm fa-github"></i>
                         <a href="https://github.com/indico/js-flask-urls">indico/js-flask-urls</a>
                     </p>
-                    <p>We could really use...</p>
+                    <p>We could really use…</p>
                     <p>🧾 Docs (only examples right now 😞)</p>
                     <p>✨ TypeScript stubs</p>
                     <p><small>🖥️ More projects using it (and finding bugs? 🐛)</small></p>
@@ -395,7 +395,7 @@
                 </section>
 
                 <section>
-                    <h2>Find me on...</h2>
+                    <h2>Find me on…</h2>
                     <p>
                         <i class="fab fa-sm fa-github"></i> <i class="fab fa-sm fa-twitter"></i>
                         <span class="colored">@ThiefMaster</span>
