--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <section>
                         <h2>Our Flask app</h2>
                         <pre><code data-trim>
-                            app = Flask('__name__')
+                            app = Flask(__name__)
 
                             @app.route('/api/time')
                             def time():
