Add link to pallets

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <p>👨‍💻 Lead Developer of the <a href="https://getindico.io">Indico project</a> at CERN</p>
                     <p>
-                        🛠️ One of the <span class="colored">Pallets</span>
+                        🛠️ One of the <a href="https://palletsprojects.com/">Pallets</a>
                         <img src="res/pallets.png"
                              class="plain transparent inline"
                              style="max-width: 1em;">
