Add some more fragmentation

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <section>
                         <h2>WTForms</h2>
                         <p>Easy for simple cases 🎉</p>
-                        <p>Complex custom widgets? Welcome to WTF-Forms</p>
-                        <ul>
+                        <p class="fragment" data-fragment-index="1">Complex custom widgets? Welcome to WTF-Forms 🐒</p>
+                        <ul class="fragment" data-fragment-index="1">
                             <li>Value round-trip even if validation fails!</li>
                             <li>Garbage-in, garbage-out? 🗑️</li>
                         </ul>
@@ -92,7 +92,7 @@
                     <section>
                         <h2>jQuery</h2>
                         <p>Do YOU still want to use it? 😜</p>
-                        <ul>
+                        <ul class="fragment">
                             <li>Spaghetti code</li>
                             <li>Classes/IDs all over the code</li>
                             <li>Barely maintainable</li>
