Add some Indico propaganda to last slide

--- a/index.html
+++ b/index.html
@@ -469,6 +469,25 @@
                         <i class="fab fa-sm fa-slack-hash" style="transform: rotate(19deg);"></i>
                         <span class="colored">ThiefMaster</span> @ Freenode (#pocoo, #indico)
                     </p>
+
+                    <div class="fragment">
+                        <hr>
+                        <div style="display: flex; justify-content: space-between;">
+                            <div>
+                                <p>…or right here! 🐍</p>
+
+                                <p>
+                                    I have hexagonal stickers!
+                                    <small>
+                                        …and my team at CERN is looking for a student intern!
+                                    </small>
+                                </p>
+                            </div>
+                            <img src="res/indico.svg"
+                                 class="plain transparent inline"
+                                 style="height: 5em;">
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
