Update for FlaskCon 2020

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <h2>How to improve it?</h2>
                         <ul>
                             <li>Build asset bundle with Webpack <img src="res/webpack-logo.svg" class="plain transparent inline" style="max-width: 1em;"></li>
-                            <li>Use modern JavaScript (ES6+, ES201x) ✨</li>
+                            <li>Use modern JavaScript (ES6+, ES2020) ✨</li>
                             <li>Make the frontend reactive <img src="res/react-logo.svg" class="spin plain transparent inline" style="max-width: 1em;"></li>
                         </ul>
                     </section>
@@ -189,7 +189,7 @@
                         <h2>Generate the client</h2>
                         <pre><code data-trim class="shell">
                             $ npx create-react-app client
-                            Creating a new React app in …/ep2019-flask-react/testapp/client.
+                            Creating a new React app in …/flaskcon-flask-react/testapp/client.
 
                             Installing packages. This might take a couple of minutes.
                             Installing react, react-dom, and react-scripts...
@@ -469,17 +469,19 @@
                         <i class="fab fa-sm fa-slack-hash" style="transform: rotate(19deg);"></i>
                         <span class="colored">ThiefMaster</span> @ Freenode (#pocoo, #indico)
                     </p>
+                    <p>
+                        <i class="fab fa-sm fa-discord"></i>
+                        <span class="colored">ThiefMaster#1753</span> @ Discord
+                    </p>
 
                     <div class="fragment">
                         <hr>
                         <div style="display: flex; justify-content: space-between;">
                             <div>
-                                <p>…or right here! 🐍</p>
-
                                 <p>
                                     I have hexagonal stickers!
                                     <small>
-                                        …and my team at CERN is looking for a student intern!
+                                        …but since this is a virtual event, I cannot give you any :(
                                     </small>
                                 </p>
                             </div>
