Add slide while showing demo app

--- a/index.html
+++ b/index.html
@@ -389,10 +389,10 @@
                             ""
                           );
                         </code></pre>
+                    </section>
 
-                        <aside class="notes">
-                            show demo
-                        </aside>
+                    <section>
+                        <h2>Demo</h2>
                     </section>
                 </section>
 
